cambio de nombre crear_tarjeta HTML

--- a/crear_tarjeta.html
+++ b/crear_tarjeta.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="infocard">
-            <textarea name="comentarios" rows="10" cols="40">Escribe aquí tus comentarios</textarea>
+            <input name="comentarios" style="width: 307px; height: 150px;"  value="Escribe aquí tus comentarios">
         </div>
 
         <div class="boton">
