solucionado rotura de estructuras en los html

--- a/ProyectoGrupal/cardDisplay.html
+++ b/ProyectoGrupal/cardDisplay.html
@@ -34,8 +34,8 @@
             </div>
             <div class="botones">
               <input class="guardar" type="button" onclick="save()" value="Guardar" />
-              <input type="button" onclick="save()" value="Editar" disabled />
-              <input type="button" onclick="save()" value="Detalles" disabled />
+              <input  class="editar" type="button"  value="Editar" disabled />
+              <input class="detalles" type="button"  value="Detalles" disabled />
             </div>
           </div>
         </div>
