--- a/ProyectoGrupal/login.html
+++ b/ProyectoGrupal/login.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="contenedorWeb">
+    <div class="contenedorWeb1">
       <div class="navWeb">
         <img src="assets/bird_2.jpg" alt="a" />
         <h1>TITULO</h1>
       </div>
 
-      <div class="sectionWeb">
-        <section class="form">
+      <div class="sectionWeb1">
+        <div class="form1">
+
           <form class="formulario">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required /><br /><br />
@@ -30,7 +31,7 @@
             /><br /><br />
             <button type="submit">Iniciar sesión</button>
           </form>
-        </section>
+        </div>
       </div>
 
       <div class="footerWeb">
