guardar en localstorage

--- a/tarjeta.html
+++ b/tarjeta.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="card.css">
 </head>
-<script src="creartajeta.js">
+<script src="creartajeta.js"
+        src="save_tarjeta.js">
+
 
 </script>
 
@@ -18,14 +20,14 @@
 
 
         <div class="title">
-            <input type="text" value=Título id="Titulo">
+            <input type="text" id="titulotarjeta" value=Título>
         </div>
         <div class="current_date">
             
         </div>
 
         <div class="infocard">
-            <input name="comentarios" style="width: 307px; height: 150px;"  value="Escribe aquí tus comentarios">
+            <input name="comentarios" id="contenido" style="width: 307px; height: 150px;"  value="Escribe aquí tus comentarios">
         </div>
 
         <div class="boton">
