--- a/ProyectoGrupal/cardDisplay.html
+++ b/ProyectoGrupal/cardDisplay.html
@@ -33,9 +33,9 @@
              
             </div>
             <div class="botones">
-              <input class="guardar" type="button" onclick="save()" value="Guardar" />
-              <input  class="editar" type="button"  value="Editar" disabled />
-              <input class="detalles" type="button"  value="Detalles" disabled />
+              <input class="guardar" type="button" value="Guardar" onclick="save()" />
+              <input  class="editar" type="button" onclick="editar()" value="Editar" disabled />
+              <input class="detalles" type="button" onclick="detalles()" value="Detalles" disabled />
             </div>
           </div>
         </div>
@@ -47,6 +47,6 @@
         <p>&copy; The bridge</p>
       </div>
     </div>
-    <script src="estructura.js"></script>
+    <script src="botones.js"></script>
   </body>
 </html>
