--- a/ProyectoGrupal/login.html
+++ b/ProyectoGrupal/login.html
@@ -38,6 +38,6 @@
         <p>&copy; The bridge</p>
       </div>
     </div>
-    <script src="estructura.js"></script>
+    <script src="botones.js"></script>
   </body>
 </html>
