--- a/tarjeta.html
+++ b/tarjeta.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="card.css">
 </head>
-<script src="creartajeta.js"
-        src="save_tarjeta.js">
+<script src="semilla_datos"
 
 
 </script>
