lógica de creación fecha y hora

--- a/tarjeta.html
+++ b/tarjeta.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="card.css">
+    
 </head>
-<script src="creartajeta.js"
-        src="save_tarjeta.js">
+<script src="lógica_fecha_hora.js"></script>
+        
 
 
 </script>
