--- a/cardDisplay.html
+++ b/cardDisplay.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="globalStyle.css" />
   </head>
   <body>
     <!---------------------NAVEGADOR----------------------------------------->
     <div class="contenedorWeb">
       <div class="navWeb">
-        <img src="assets/bird_2.jpg" alt="a" />
+        <!-- <img class="scaled" src="assets/logo.png" alt="a" /> -->
         <div class="contenedorLogo"></div>
-        <h1>TITULO</h1>
+        <h1>HEDWIGHTLETTER</h1>
         <div class="logOut">
           <button class="btnOut">CERRAR SESION</button>
           <p>USER</p>
@@ -29,7 +29,7 @@
             </div>
             <div class="current_date"></div>
             <div class="infocard">
-              <input class="inputTarea" name="comentarios" value="Escribe aqui tus comentarios" rows="10" cols="25" />
+              <input class="inputTarea" name="comentarios" value=" Descripción" rows="10" cols="25" />
              
             </div>
             <div class="botones">
@@ -44,7 +44,7 @@
       <!---------------------FOOTER----------------------------------------->
 
       <div class="footerWeb">
-        <p>&copy; The bridge</p>
+        <p>&copy; Hedwigletter</p>
       </div>
     </div>
     <script src="botones.js"></script>
