feat: refactor code

--- a/tasks.html
+++ b/tasks.html
@@ -16,7 +16,7 @@
         <h1>HEDWIGHTLETTER</h1>
         <div class="logOut">
           <button class="btnOut">CERRAR SESION</button>
-          <p>USER</p>
+          <p id="username">USER</p>
         </div>
       </div>
       <!---------------------SECTION----------------------------------------->
@@ -25,17 +25,17 @@
         <div class="upSection">
           <div class="card">
             <div class="title">
-              <input type="text" value="Título" id="Titulo" />
+              <input type="text" value="Título" id="titulotarjeta" />
             </div>
             <div class="current_date"></div>
             <div class="infocard">
-              <input class="inputTarea" name="comentarios" value=" Descripción" rows="10" cols="25" />
+              <input class="inputTarea" name="comentarios" id="contenido" value=" Descripción" rows="10" cols="25" />
              
             </div>
             <div class="botones">
               <input class="guardar" type="button" value="Guardar" onclick="save()" />
-              <input  class="editar" type="button" onclick="editar()" value="Editar" disabled />
-              <input class="detalles" type="button" onclick="detalles()" value="Detalles" disabled />
+              <input  class="editar" type="button" value="Editar" disabled />
+              <input class="detalles" type="button" value="Detalles" disabled />
             </div>
           </div>
         </div>
@@ -47,6 +47,7 @@
         <p>&copy; Hedwigletter</p>
       </div>
     </div>
-    <script src="botones.js"></script>
+    <script src="tasks.js"></script>
+    <script src="logOut.js"></script>
   </body>
 </html>
